libthai (0.1.6-2) UNRELEASED; urgency=low

  * Split build rules into build-indep and build-arch.
  * Make the package binNMU-safe by using ${binary:Version} instead of
    ${Source-Version} for libthai-dev dependency on libthai0.
  * Suggests: libthai-doc in libthai-dev.

 -- Theppitak Karoonboonyanan <thep@linux.thai.net>  Mon, 25 Sep 2006 17:49:43 +0700

libthai (0.1.6-1) unstable; urgency=low

  * New upstream release.
  * Provided more informative short description.  Also added details about
    individual packages, as well as upstream homepage. (Closes: #360621)
  * Added libthai-doc package, installing HTML document available in new
    upstream release, with doc-base control file.
  * Build-depends on doxygen.
  * Used individual package.docs files, so they get installed in all packages.
  * Removed useless README.Debian.
  * Add back config.sub and config.guess replacements.
  * Used dh_install instead of the old dh_movefiles.
  * Removed unneeded debhelper commands: dh_installexamples, dh_installmenu,
    dh_installcron, dh_installman, dh_installinfo.
  * Bumped standard version to 3.7.2, no changes needed.
  * Added watch file.

 -- Theppitak Karoonboonyanan <thep@linux.thai.net>  Sun,  6 Aug 2006 23:00:52 +0700

libthai (0.1.5-3) unstable; urgency=low

  * actually closed ITP bug (Closes: #358539)
  * debian/control:
    - took over the packaging from Pattara Kiatisevi with his consent.
      thanks for your initial works! (he's still an uploader, anyway)
  * debian/rules:
    - removed commented debhelper instructions
  * debian/copyright:
    - more info on current maintainer
    - added missing copyright years

 -- Theppitak Karoonboonyanan <thep@linux.thai.net>  Tue, 28 Mar 2006 09:14:55 +0700

libthai (0.1.5-2) unstable; urgency=low

  * initial debian version
  * debian/rules:
    - removed replacement of upstream's config.guess and config.sub
  * debian/copyright:
    - updated e-mail addresses and urls
    - mentioned system file for LGPL-2