@@ -3,8 +3,8 @@ Priority: optional
 Section: libs
 Maintainer: Theppitak Karoonboonyanan <thep@linux.thai.net>
 Uploaders:  Pattara Kiatisevi <ott@linux.thai.net>
-Build-Depends: dpkg-dev (>= 1.13.19), debhelper (>> 3.0.0), doxygen
-Standards-Version: 3.7.2
+Build-Depends: dpkg-dev (>= 1.13.19), debhelper (>> 3.0.0), autotools-dev, doxygen, libdatrie-dev
+Standards-Version: 3.7.2.2
 
 Package: libthai-dev
 Section: devel
