@@ -1,6 +1,10 @@
 #!/usr/bin/make -f
+# -*- makefile -*-
 # Sample debian/rules that uses debhelper.
-# GNU copyright 1997 to 1999 by Joey Hess.
+# This file was originally written by Joey Hess and Craig Small.
+# As a special exception, when this file is copied by dh-make into a
+# dh-make output file, you may use that output file without restriction.
+# This special exception was added by Craig Small in version 0.37 of dh-make.
 
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
@@ -21,12 +25,9 @@ ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
 else
 	CFLAGS += -O2
 endif
-ifeq (,$(findstring nostrip,$(DEB_BUILD_OPTIONS)))
-	INSTALL_PROGRAM += -s
-endif
 
 # shared library versions, option 1
-version=0.0.0
+version=0.1.1
 major=0
 # option 2, assuming the library is created as src/.libs/libfoo.so.2.0.5 or so
 #version=`ls src/.libs/lib*.so.* | \
@@ -37,16 +38,17 @@ major=0
 config.status: configure
 	dh_testdir
 	# Add here commands to configure the package.
-	./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info --enable-shared
+	./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) --prefix=/usr --mandir=\$${prefix}/share/man --infodir=\$${prefix}/share/info CFLAGS="$(CFLAGS)" LDFLAGS="-Wl,-z,defs"
 
 
 build-indep: build-indep-stamp
 build-indep-stamp:  config.status
 	dh_testdir
 
+	# Add here commands to compile the package.
 	cd doc; $(MAKE)
 
-	touch build-indep-stamp
+	touch $@
 
 build-arch: build-arch-stamp
 build-arch-stamp:  config.status
@@ -55,14 +57,14 @@ build-arch-stamp:  config.status
 	# Add here commands to compile the package.
 	$(MAKE)
 
-	touch build-arch-stamp
+	touch $@
 
 build: build-indep build-arch
 
 clean:
 	dh_testdir
 	dh_testroot
-	rm -f build-arch-stamp build-indep-stamp
+	rm -f build-indep-stamp build-arch-stamp
 
 	# Add here commands to clean up after the build process.
 	-$(MAKE) distclean
